package eapli.base.clientusermanagement.domain.jobOpening;

import eapli.framework.domain.model.ValueObject;

public class JobReference implements ValueObject, Comparable<JobReference> {


    public JobReference() {
    }

    @Override
    public int compareTo(JobReference o) {
        return 0;
    }
}
