package eapli.base.domain.JobOpeningProcess;

public enum PhaseType {
    APPLICATION,
    SCREENING,
    INTERVIEWS,
    ANALYSIS,
    RESULT
}
