package eapli.base.domain.jobApplication;

public class AttachedEmail {
    private String attachedEmail;
    public AttachedEmail(String attachedEmail) {
        this.attachedEmail = attachedEmail;
    }
}
